JumpScript/tests/baselines/reference/unterminatedStringLiteralWithBackslash1.errors.txt
tests/cases/compiler/unterminatedStringLiteralWithBackslash1.jump(1,3): error TS1126: Unexpected end of text.


==== tests/cases/compiler/unterminatedStringLiteralWithBackslash1.jump (1 errors) ====
    "\
      
!!! error TS1126: Unexpected end of text.